Getting pass 1 working of document loading to suit new model.

--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -120,7 +120,7 @@
 		<div class="panel-heading clearfix">
 			<h2 class="pull-left">Documents</h2>
 			<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear>
-			<div class="panel-heading-actions pull-right hidden">
+			<div class="panel-heading-actions pull-right">
 				<a href class="btn btn-default btn-sm"
 					x-modal-document-upload-classify
 					x-project="docBrowser.project"
