comment out superfluous permission directives

--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -3,7 +3,7 @@
 
     <div class="panel-heading clearfix">
         <h2>{{s.caption}}</h2>
-        <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="s.project" x-permissions="listArtifacts"></tmpl-permissions-gear>
+<!--         <tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="s.project" x-permissions="listArtifacts"></tmpl-permissions-gear> -->
 
         <!-- ARTIFACT MENU -->
         <div class="hidden" ng-if="!s.public">
