--- a/modules/project-complaints/client/views/complaint-list.html
+++ b/modules/project-complaints/client/views/complaint-list.html
@@ -3,7 +3,7 @@
 <div class="project-complaints-view">
 	<div class="view-title-container">
 		<h1><span ng-show="project.name">{{ project.name }}&nbsp; &rsaquo; &nbsp;</span>Complaints</h1>
-		<tmpl-permissions-gear class="permission-btn" x-context="project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear>
+<!-- 		<tmpl-permissions-gear class="permission-btn" x-context="project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear> -->
 	</div>
 	<div class="view-body-container">
 		<div class="button-bar">
