--- a/modules/users/client/views/admin/user-list.html
+++ b/modules/users/client/views/admin/user-list.html
@@ -1,6 +1,6 @@
 <div class="view-title-container">
 	<h1>Users & Contacts</h1>
-	<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear>
+<!-- 	<tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear> -->
 </div>
 
 <div class="view-body-container">
