Strip IDRs on additional TS data.

--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -93,19 +93,19 @@
 				<div class="col-sm-4 col-md-4">
 					<div class="detail-row">
 						<label>Project Analyst</label>
-						<span class="value">{{project.projectAnalyst}}</span>
+						<span class="value">{{project.projectAnalyst | stripIDR}}</span>
 					</div>
 				</div>
 				<div class="col-sm-4 col-md-4">
 					<div class="detail-row">
 						<label>Project Assistant</label>
-						<span class="value">{{project.projectAssistant}}}</span>
+						<span class="value">{{project.projectAssistant | stripIDR}}</span>
 					</div>
 				</div>
 				<div class="col-sm-4 col-md-4">
 					<div class="detail-row">
 						<label>Administrative Assistant</label>
-						<span class="value">{{project.administrativeAssistant}}</span>
+						<span class="value">{{project.administrativeAssistant | stripIDR}}</span>
 					</div>
 				</div>
 			</div><!-- / ADDITIONAL CONTACTS -->	
