--- a/modules/artifacts/client/views/artifact-view.html
+++ b/modules/artifacts/client/views/artifact-view.html
@@ -6,10 +6,6 @@
 	</div>
 
 	<div class="view-body-container">
-		<div class="text-right hidden">
-			<a class="btn btn-link btn-xs" ui-sref="p.detail">Cancel</a>
-			<a class="btn btn-link btn-xs" ui-sref="p.artifact.edit({artifactId:artifact._id})">Edit</a>
-		</div>
 		<!-- <div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div> -->
 		<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
 		<div ng-if="authentication.user" ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
@@ -17,7 +13,7 @@
 		<div class="form-footer clearfix">
 			<div class="pull-right">
 				<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
-				<a ng-if="artifact.userPermissions.write"
+				<a ng-if="artifact.userCan.write"
 				   class="btn btn-default"
 				   ui-sref="p.artifact.edit({artifactId:artifact._id})">Edit</a>
 			</div>
