Set check on the Permissions Gear template to only render when Authenticated and can managePermissions.

--- a/modules/core/client/views/role-permissions-gear.html
+++ b/modules/core/client/views/role-permissions-gear.html
@@ -1,1 +1,1 @@
-<a class="btn btn-link btn-sm" x-role-permissions-modal x-context="context" x-object="object"><i class="glyphicon glyphicon-cog"></i></a>
+<a ng-if="permCtrl.showGear" class="btn btn-link btn-sm" x-role-permissions-modal x-context="context" x-object="object"><i class="glyphicon glyphicon-cog"></i></a>
