--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -47,7 +47,7 @@
                     </td>
                 </tr>
                 <tr class="no-records" ng-if="!$data || $data.length === 0">
-                    <td>No records found.</td>
+                    <td colspan="6">No records found.</td>
                 </tr>
             </table>
         </div>
