--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -6,37 +6,45 @@
 
     <div class="view-body-container">
 
-        <div class="public-comment-alert">
-            <h2>Public Comment Period is
-                <span ng-if="isBefore">Scheduled</span>
-                <span ng-if="isOpen">Now Open</span>
-                <span ng-if="isClosed">Now Closed</span>
-            </h2>
-            <h3><strong>{{ period.dateStarted | date }}</strong> - <strong>{{ period.dateCompleted | date }}</strong></h3>
-
-            <p ng-if="!isClosed">{{ period.instructions }}</p>
-
-            <p ng-if="isClosed">These are the closing remarks</p>
-
-            <ul class="public-comment-period-document-links">
-                <li><a class="document-name" x-artifact-display-modal x-mode="'view'" x-artifact="artifact" x-project="project">{{ artifact.name }}</a></li>
-            </ul>
-
-            <button ng-if="isOpen && period.userCan.addComment" class="btn btn-success" x-add-public-comment x-project="project" x-period="period">
-                Click Here to Submit a Comment
-            </button>
-
-            <div class="open-house-dates">
-                <h4>Open House Dates</h4>
-                <ul class="list-unstyled">
-                    <li ng-repeat="h in period.openHouses">
-                        <b>{{ h.eventDate | amDateFormat:'MMM Do YYYY' }}</b>
-                        <br/>
-                        <pre class="col-xs-offset-1">{{ h.description }}</pre>
-                    </li>
-                </ul>
+        <div class="panel panel-default">
+            
+            <div class="pcp-alert clearfix">
+                <div class="pull-left">
+                    <h2>Public Comment Period is <span ng-if="isBefore">Scheduled</span><span ng-if="isOpen">Now Open</span><span ng-if="isClosed">Now Closed</span></h2>
+                    <span class="pcp-dates">{{ period.dateStarted | amDateFormat:'MMMM Do YYYY' }} &nbsp;-&nbsp; {{ period.dateCompleted | amDateFormat:'MMMM Do YYYY' }}</span>
+                </div>
+                <div class="pull-right">
+                    <button class="btn submit-comment-btn" ng-if="isOpen && period.userCan.addComment" x-add-public-comment x-project="project" x-period="period">Click Here to Submit a Comment</button>
+                </div>
             </div>
+
+            <div class="pcp-details">
+                <section>
+                    <h4>About this Comment Period...</h4>
+                    <pre class="pcp-desc" ng-if="!isClosed">{{ period.instructions }}</pre>
+                    <pre class="pcp-desc" ng-if="isClosed">These are the closing remarks</pre>
+                    <ul class="pcp-package-links">
+                        <li>
+                            <a x-artifact-display-modal x-mode="'view'" x-artifact="artifact" x-project="project">
+                                <span class="glyphicon glyphicon-list-alt"></span>{{ artifact.name }}
+                            </a>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Open House Dates</h4>
+                    <ul class="pcp-open-house-list">
+                        <li ng-repeat="h in period.openHouses">
+                            <strong>{{ h.eventDate | amDateFormat:'MMMM Do YYYY' }}</strong>
+                            <pre>{{ h.description }}</pre>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+
         </div>
+
         <tmpl-public-comment-list x-period="period" x-project="project"></tmpl-public-comment-list>
+
     </div>
 </div>
