Remove date column text filters.

--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -23,7 +23,7 @@
             sortable="'stage'">{{o.stage}}
         </td>
         <!-- <td data-title="'Desc.'" filter="{'shortDescription':'text'}" class="text-center" sortable="'shortDescription'">{{o.shortDescription}}</td> -->
-        <td data-title="'Last Update'" class="text-center" filter="{'dateUpdated':'text'}" sortable="'dateUpdated'">{{
+        <td data-title="'Last Update'" class="text-center" sortable="'dateUpdated'">{{
           o.dateUpdated | date : format : timezone }}
         </td>
         <td data-title="'Updated By'" class="text-center" filter="{'updatedBy.username':'text'}"
