Adding some spacing for gears to play nicely with panel-actions.

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -356,6 +356,10 @@ ul.list-indent-left {
 	border-top: none
 }
 
+.panel-heading-actions {
+	padding-right: 20px;
+}
+
 .list-documents li.row-enforcement {
 	padding: 0;
 }
